# multiplayer_shooting_game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Shooter.cpp  Shooter.h  ShooterConsts.h  Source.cpp
GameEngine/: README.md  Source.cpp
GameEngine/engine/: Camera.cpp  Camera.h  Consts.h  Engine.cpp  Engine.h  Mesh.cpp  Object.h  Triangle.h  World.cpp  World.h
GameEngine/engine/animation/: AColor.h  ADecompose.h  AFunction.h  ATranslate.h  ATranslateToPoint.h  Animation.h
GameEngine/engine/io/: Mouse.cpp  Screen.cpp
GameEngine/engine/math/: Plane.h  Vec4D.h
GameEngine/engine/network/: MsgType.h  ServerUDP.h
GameEngine/engine/physics/: RigidBody.cpp  RigidBody.h  Simplex.h
GameEngine/engine/utils/: Log.h  Time.h  Timer.h
engine/: Consts.h  Mesh.h
engine/animation/: ARotate.h  AScale.h  AWait.h  Interpolation.h
engine/gui/: Button.h  Window.h
engine/io/: Mouse.h  Screen.h
engine/math/: Matrix4x4.h
engine/network/: ClientUDP.h  ReliableMsg.h  UDPConnection.h  UDPSocket.cpp  UDPSocket.h
engine/utils/: EventHandler.cpp  EventHandler.h  ResourceManager.h
network/: Chat.h  ShooterClient.cpp  ShooterClient.h  ShooterMsgType.h  ShooterServer.cpp  ShooterServer.h
player/: Player.cpp  Player.h  PlayerController.cpp  PlayerController.h
weapon/: Ak47.h  Gold_Ak47.h  Gun.h  Rifle.h  Shotgun.h  Weapon.cpp  Weapon.h
